<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Meet TokBox</string>
    <string name="action_settings">Settings</string>
    <string name="room_selection_intro">WebRTC Demo</string>
    <string name="input_room_name_hint">Enter Room Name</string>
    <string name="input_username_hint">Enter Username</string>
    <string name="button_join_room">Join</string>
    <string name="select_stream">Select Stream:</string>
    <string name="error">The session failed to connect</string>
    <string name="error_title">Meet TokBox Error</string>
    <string name="author">Powered by OpenTok</string>
    <string name="welcome_text_chat">Welcome to Meet TokBox by TokBox. \n</string>
    <string name="nick">/nick </string>

    <string name="swapStr">Swap camera</string>
    <string name="endCall1">End call</string>
    <string name="endCall2">End</string>
    <string name="audioOnly">Audio only</string>
    <string name="send">send</string>
    <string name="chatStr">Text chat</string>
    <string name="shareStr">Share link</string>
    <string name="archivingOn">Archiving on</string>
    <string name="archivingOff">Archiving off</string>
    <string name="sharingLink">Please join me at</string>
    <string name="clearNotificationService">Clear Notification</string>

    <string name="serverURL">"https://meet.tokbox.com/"</string>

    <string name="capturer_resolution_prompt">Choose the camera capturer resolution</string>
    <string name="capturer_fps_prompt">Choose the camera capturer fps</string>

    <string name="capturer_res_label">Capture Resolution</string>
    <string-array name="pub_capturer_resolution">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
    <string name="capturer_fps_label">Capture Frame Rate</string>
    <string-array name="pub_capturer_fps">
        <item>30</item>
        <item>15</item>
        <item>7</item>
        <item>1</item>
    </string-array>
    <string name="title_activity_advanced_settings">Settings</string>
    <string name="h264_switch_label">Enable H264 support</string>


    <!-- Strings related to Settings -->
    <string name="pref_debug_settings">Debug Settings</string>

    <string name="pref_jnilog_title">Enable JNI Logging</string>
    <string name="pref_jnilog_desc">
        Enable Opentok JNI debug logging messages.
    </string>

    <string name="pref_otklog_title">Enable OTKit Logging</string>
    <string name="pref_otklog_desc">
        Enable Opentok OTKit debug logging messages.
    </string>

    <string name="pref_rtclog_title">Enable WebRTC Logging</string>
    <string name="pref_rtclog_desc">
        Enable WebRTC debug logging messages.
    </string>

    <string name="pref_mediacodec_title">Enable New Engine</string>
    <string name="pref_mediacodec_desc">
        Use MediaCodecVideoEncoderFactory/MediaCodecVideoDecoderFactory WebRTC factories.
    </string>

</resources>
