<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HomeActivity">

    <TextView android:id="@+id/introText"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:text="@string/room_selection_intro"
        style="@style/AppTheme.TitleText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <RelativeLayout android:id="@+id/inputArea"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/introText">

        <EditText
            android:id="@+id/input_room_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="140"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:hint="@string/input_room_name_hint" >
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/input_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:maxLength="140"
            android:ems="10"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/input_room_name"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:hint="@string/input_username_hint" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/combo_capturer_resolution"
            android:layout_alignBottom="@+id/combo_capturer_resolution"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/capturer_res_label"
            android:layout_toLeftOf="@+id/combo_capturer_resolution"
            android:layout_toStartOf="@+id/combo_capturer_resolution" />

        <Spinner
            android:id="@+id/combo_capturer_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/pub_capturer_resolution"
            android:prompt="@string/capturer_resolution_prompt"
            android:spinnerMode="dialog"
            android:visibility="visible"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/input_username"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/combo_capturer_fps"
            android:layout_alignBottom="@+id/combo_capturer_fps"
            android:layout_alignLeft="@+id/textView2"
            android:layout_alignStart="@+id/textView2"
            android:text="@string/capturer_fps_label"
            android:layout_toLeftOf="@+id/combo_capturer_fps"
            android:layout_toStartOf="@+id/combo_capturer_fps" />

        <Spinner
            android:id="@+id/combo_capturer_fps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:entries="@array/pub_capturer_fps"
            android:prompt="@string/capturer_fps_prompt"
            android:spinnerMode="dialog"
            android:visibility="visible"
            android:layout_below="@+id/combo_capturer_resolution"
            android:layout_alignLeft="@+id/combo_capturer_resolution"
            android:layout_alignStart="@+id/combo_capturer_resolution"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Switch
            android:id="@+id/h264Support"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignStart="@+id/textView3"
            android:layout_below="@+id/combo_capturer_fps"
            android:layout_marginTop="19dp"
            android:checked="false"
            android:textAppearance="@android:style/TextAppearance.Small"
            android:textColor="@color/white"
            android:text="@string/h264_switch_label"
            android:visibility="visible" />

    </RelativeLayout>

    <Button
        android:id="@+id/button_join_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:onClick="joinRoom"
        android:text="@string/button_join_room"
        android:layout_marginBottom="15dp"
        android:layout_above="@+id/author_label"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView android:id="@+id/author_label"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/author"
        android:layout_alignParentBottom= "true"
        android:textColor="@color/white"
        android:textSize="14sp"/>




</RelativeLayout>